src/objects/eCASS_settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Care_Plan_Overview_Print_Page__c</fullName>
        <defaultValue>&quot;CarePlanOverviewPrint&quot;</defaultValue>
        <inlineHelpText>Change this if you want a different page printed for the care plan overview</inlineHelpText>
        <label>Care Plan Overview Print Page</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Plan_Print_Page__c</fullName>
        <defaultValue>&quot;CarePlanPrintPage&quot;</defaultValue>
        <inlineHelpText>Page referenced from the print button on the care plan page</inlineHelpText>
        <label>Care Plan Print Page</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_past_attendances__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>On enrolment in a course, create past attendance records</inlineHelpText>
        <label>Create past attendances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <defaultValue>&quot;Organisation&quot;</defaultValue>
        <label>Organisation Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rules_on__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Turn off for data import</inlineHelpText>
        <label>Rules on</label>
        <type>Checkbox</type>
    </fields>
    <label>eCASS settings</label>
</CustomObject>